# pyproject

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  quality.yml  test.yml
docs/: generate.py  getting_started.md  notes.md
getting_started/: index.html
notes/: index.html
search/: search_index.json
src/pyproject/: __init__.py  module.py
tests/: __init__.py  test_pypackage.py
