[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = "A sample Python project."
authors = ["aahnik <daw@aahnik.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aahnik/pyproject"
documentation = "https://aahnik.github.io/pyproject"
keywords = ["python","package","template"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
tox = "^3.23.0"
mkdocs = "^1.1.2"
mkdocs-gen-files = "^0.3.1"
pylint = "^2.7.4"
mypy = "^0.812"
isort = "^5.8.0"
pre-commit = "^2.12.0"
pydocstyle = "^6.0.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
addopts = "--cov=./src --cov-report=term-missing --cov-report=xml --cov-report=html"
